Fix buttons and split 2-col sub-header styling, section spacing, tidy up some html notes

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,11 @@ h1, h2, h3 {
 
 }
 
+h4 {
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
+}
+
 .uppercase{
     text-transform: uppercase; 
 }
